<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>gov.dwp.ms</groupId>
    <artifactId>dwp-backend-test</artifactId>
    <packaging>pom</packaging>
    <version>0.0.1-SNAPSHOT</version>
    <name>DWP User by Radius API Microservice</name>
    <modules>
        <module>dwp-backend-test-api</module>
        <module>dwp-backend-test-model</module>
        <module>dwp-backend-test-service</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.3.1.RELEASE</version>
    </parent>
    <profiles>
	    <profile>
	        <id>dev</id>
	        <activation>
	            <activeByDefault>true</activeByDefault>
	        </activation>
	        <properties>
	            <spring.profiles.active>dev</spring.profiles.active>
	        </properties>
	    </profile>
	    <profile>
	        <id>test</id>
	        <properties>
	            <spring.profiles.active>test</spring.profiles.active>
	        </properties>
	    </profile>
	    <profile>
	        <id>prod</id>
	        <properties>
	            <spring.profiles.active>prod</spring.profiles.active>
	        </properties>
	    </profile>
	</profiles>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
	<dependency>
	    <groupId>org.springframework.boot</groupId>
	    <artifactId>spring-boot-starter-actuator</artifactId>
	</dependency>
        <dependency>
	    <groupId>org.springframework.boot</groupId>
	    <artifactId>spring-boot-starter-test</artifactId>
	    <scope>test</scope>
	</dependency>
	<dependency>
	   <groupId>org.mockito</groupId>
           <artifactId>mockito-core</artifactId>
	</dependency> 
        <dependency>
	   <groupId>org.slf4j</groupId>
           <artifactId>slf4j-api</artifactId>
	</dependency> 
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>13</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>